--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,9 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
+#streamlit stuff
+.streamlit
+
 # Environments
 .env
 .venv
@@ -160,3 +163,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
